--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,7 @@
         var utc8DiffMinutes = date.getTimezoneOffset() + 480
         date.setMinutes(date.getMinutes() + utc8DiffMinutes);
 
-        var timeString = date.getHours() + ':' + ('0' + date.getMinutes()).slice(-2) +':' +
+        var timeString = ('0' + date.getHours()).slice(-2)+ ':' + ('0' + date.getMinutes()).slice(-2) +':' +
         ('0' + date.getSeconds()).slice(-2);
         var dateString = (date.getMonth() + 1) + '月' + date.getDate() + '日';
         var weekList = ['日', '一', '二', '三', '四', '五', '六'];
